Excluding a collection crashes with viewport statistics enabled #83275

Closed
opened 2020-12-01 10:09:39 +01:00 by Andy Goralczyk · 7 comments
Member

System Information
Operating system: Pop!_OS 20.10
Graphics card: Quadro RTX 8000

Blender Version
Broken: current master 2.92 645c2bd4d0
Worked: last build that worked for me was c751d40e07

'Statistics' are enabled in the viewport overlay settings. In the scene, a collection contains any number of meshes that influence the statistics. Upon excluding said collection from the outliner (unchecking its checkmark), Blender segfaults.

Open the file, uncheck the checkmark next to the colleciton 'Meshes' in the outliner: statistic_crash.blend

**System Information** Operating system: Pop!_OS 20.10 Graphics card: Quadro RTX 8000 **Blender Version** Broken: current master 2.92 645c2bd4d002 Worked: last build that worked for me was c751d40e070c 'Statistics' are enabled in the viewport overlay settings. In the scene, a collection contains any number of meshes that influence the statistics. Upon excluding said collection from the outliner (unchecking its checkmark), Blender segfaults. Open the file, uncheck the checkmark next to the colleciton 'Meshes' in the outliner: [statistic_crash.blend](https://archive.blender.org/developer/F9418818/statistic_crash.blend)
Author
Member

Added subscriber: @eyecandy

Added subscriber: @eyecandy

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Dalai Felinto self-assigned this 2020-12-01 10:13:56 +01:00
Dalai Felinto was unassigned by Andy Goralczyk 2020-12-01 10:14:26 +01:00
Author
Member

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Member

Changed status from 'Confirmed' to: 'Needs Triage'

Changed status from 'Confirmed' to: 'Needs Triage'
Dalai Felinto self-assigned this 2020-12-01 10:20:52 +01:00

99% chance this is fixed by D9680, doing some final tests before pushing the fix.

99% chance this is fixed by [D9680](https://archive.blender.org/developer/D9680), doing some final tests before pushing the fix.

This issue was referenced by edf1095176

This issue was referenced by edf109517648f149724a5fdc1797b3ce694b28c7

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83275
No description provided.