Fix T83275: Crash with scene statics and empty scene

ob can be NULL, so it needs to be checked before accessing ob->mode

Differential Revision: https://developer.blender.org/D9680